--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
   </head>
   <body>
     <main id="main">
-        <h1 id="title">Tropicalia Movement</h1>
+        <h1 id="title">Tropicália Movement</h1>
         <div id="img-div">
           <img src="https://cdn.domestika.org/c_fill,dpr_auto,f_auto,h_1200,pg_1,t_base_params,w_1200/v1622884832/blog-post-covers/000/008/010/8010-original.jpg?1622884832" id="image" alt="key figures of tropicalia movement"/>
           <figcaption id="img-caption"><strong>Luminaries of the post-Bossa aesthetic</strong> (<em>From bottom-left</em>: Os Mutantes, Jorge Ben, Caetano Veloso, Gilberto Gil, & Gal Costa).</figcaption>
         </div>
-        <p id="tribute-info" class="p1">The revolutionary collective took hold of Brazil's youth concretely with 1968's eponymous manifesto album <em>:ou Panis et Circencis</em><sup><a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Tropic%C3%A1lia#Musical_movement">1</a></sup>, touting...</p> 
-        <ul>
-          <li>Mutinous political expressionism</li>
-          <li>Bohemian-style flamboyance</li> 
-          <li>Radical & unconforming musical explorations</li>
-        </ul>
-        <hr>
-        <p class="p2">Standing united in opposition to a corrupt dictatorship & homogenized nationalist ideals, these Libertines-turned-Icons proudly affirmed the need for an unfiltered ethos; and in the process, added to the brazilian identity without sequestering it's citizens from the evolving cultural world stage. <em>Tudo bem</em></p>
+        <div class="main-text">
+          <p id="tribute-info">The revolutionary collective took hold of Brazil's youth concretely with 1968's eponymous manifesto album <em>:ou Panis et Circencis</em><sup><a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Tropic%C3%A1lia#Musical_movement">1</a></sup>, touting...</p> 
+          <ul>
+            <li>Mutinous political expressionism</li>
+            <li>Bohemian-style flamboyance</li> 
+            <li>Radical & unconforming musical explorations</li>
+          </ul>
+          <p>Standing united in opposition to a corrupt dictatorship & homogenized nationalist ideals, these Libertines-turned-Icons proudly affirmed the need for an unfiltered ethos; and in the process, added to the brazilian identity without sequestering it's citizens from the evolving cultural world stage. <em>Tudo bem</em></p>
+        </div>
     </main>
   </body>
 </html>
